Tidied up YAML spec route.
